--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,11 @@
 [tool.poetry]
-name = "python-template"
+name = "repl_nix_Benzene-Bot"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Cookieglue <<>>"]
 
 [tool.poetry.dependencies]
-python = ">=3.8.0,<3.9"
-numpy = "^1.22.2"
+python = "^3.8"
 discord = "^1.7.3"
 
 [tool.poetry.dev-dependencies]
